--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                 <div class="col">
                     <h4>Address</h4>
                     <li>Rajshahi</li>
-                    <li>Rajshahi</li>
-                    <li>Rajshahi</li>
-                    <li>Rajshahi</li>
+                    <li>Dhaka</li>
+                    <li>Pabna</li>
+                    <li>Kumilla</li>
                 </div>
                 <div id="contact" class="col">
                     <h4>Contact</h4>
